fix link color and set width and text align

--- a/style.css
+++ b/style.css
@@ -1520,9 +1520,11 @@
     border: 2px solid #bc6c25;
     border-radius: 25px;
     text-decoration: none;
-    color: #bc6c25;
+    color: #C87641;
     font-size: 16px;
+    width: 98px;
     font-weight: bold;
+    text-align: center;
     transition: background-color 0.3s, color 0.3s;
 }
 
